--- a/Semana09/semana09.css
+++ b/Semana09/semana09.css
@@ -34,7 +34,7 @@ body {
     border-radius: 10px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     background: linear-gradient(135deg, #1CB698, #252A2E);
-    box-shadow: 0 0 20px rgba(0, 255, 200, 0.5);
+    box-shadow: 10px 20px 60px rgba(255, 255, 255, 0.5);
 }
 
 .image-card img {
@@ -63,7 +63,7 @@ body {
     transition: opacity 0.3s ease;
     text-align: center;
     background: rgba(0, 0, 0, 0.6);
-    color: #0ff;
+    color: rgb(255, 255, 255);
 }
 
 .image-card:hover .overlay {
@@ -74,12 +74,12 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 8px;
-    text-shadow: 0 0 10px #0ff;
+    text-shadow: 0 0 10px rgb(0, 0, 0);
 }
 
 .subtitle {
     font-size: 16px;
-    text-shadow: 0 0 5px #0ff;
+    text-shadow: 0 0 5px rgb(3, 3, 3);
 }
 
 /* Especifica la alineación de cada tarjeta */
